# python_telegram_bot_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
requirements/: develop.txt  production.txt
src/: run_app.py
src/bot/core/: config.py
src/bot/core/logging_bot/: log_config.py
