[tool.poetry]
name = "python-telegram-bot-template"
version = "0.1.0"
description = ""
authors = ["Konstantin Raikhert <raikhert13@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
